--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.3.1"
 dotenvy = "0.15.7"
+env_logger = "0.10.0"
 serde = { version = "1.0.176", features = ["derive"] }
 serde_json = "1.0.104"
 serde_with = "3.1.0"
@@ -17,5 +18,6 @@ sqlx = { version = "0.7.1", features = [
   "postgres",
   "chrono",
   "runtime-tokio",
+  "macros",
 ] }
 tokio = { version = "1.29.1", features = ["full"] }
