--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,10 +7,13 @@ edition = "2021"
 
 [dependencies]
 actix-web = "4.3.1"
+rust-argon2 = "1.0.0"
 async-trait = "0.1.72"
+bcrypt = "0.15.0"
 chrono = { version = "0.4.26", features = ["serde"] }
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
+pbkdf2 = "0.12.2"
 scrypt = "0.11.0"
 serde = { version = "1.0.176", features = ["derive"] }
 serde_json = "1.0.104"
@@ -25,3 +28,4 @@ sqlx = { version = "0.7.1", features = [
 ] }
 tokio = { version = "1.29.1", features = ["full"] }
 uuid = { version = "1.4.1", features = ["v4", "serde"] }
+rand = "0.8.5"
