--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,6 @@ sqlx = { version = "0.7.1", features = [
 tokio = { version = "1.29.1", features = ["full"] }
 uuid = { version = "1.4.1", features = ["v4", "serde"] }
 rand = "0.8.5"
+jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
+openssl = "0.10.55"
+rsa = { version = "0.9.2", features = ["sha2"] }
