--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,19 @@
 [package]
-name = "server"
+name = "mocha"
 version = "0.1.0"
 edition = "2021"
+authors = ["Anish Sinha <anishsinha0128@gmail.com>"]
+description = "A blog for Jenny and me"
+keywords = ["web-backend", "jwt-auth", "sqlx"]
+publish = false
+license = "0BSD"
+readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-web = "4.3.1"
+actix-web = { version = "4.3.1", features = ["cookies"] }
+actix-web-httpauth = "0.8.0"
 rust-argon2 = "1.0.0"
 async-trait = "0.1.72"
 bcrypt = "0.15.0"
@@ -32,3 +39,4 @@ rand = "0.8.5"
 jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
 openssl = "0.10.55"
 rsa = { version = "0.9.2", features = ["sha2"] }
+actix-web-grants = "3.0.0"
