--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ rust-argon2 = "1.0.0"
 async-trait = "0.1.72"
 bcrypt = "0.15.0"
 chrono = { version = "0.4.26", features = ["serde"] }
+derive_more = "0.99.17"
 dotenvy = "0.15.7"
 env_logger = "0.10.0"
 pbkdf2 = "0.12.2"
