--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,5 @@ jsonwebtoken = { version = "8.3.0", features = ["use_pem"] }
 openssl = "0.10.55"
 rsa = { version = "0.9.2", features = ["sha2"] }
 actix-web-grants = "3.0.0"
+mobc = "0.8.1"
+mobc-redis = "0.8.0"
