Refactor register method to work with both session interfaces

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,3 +44,6 @@ actix-web-grants = "3.0.0"
 mobc = "0.8.1"
 mobc-redis = "0.8.0"
 log = "0.4.19"
+hmac = "0.12.1"
+chacha20poly1305 = "0.10.1"
+sha2 = "0.10.7"
