--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
       POSTGRES_INITDB_ARGS: "-A md5"
     ports:
       - "5432:5432"
+    volumes:
+      - ./migrations/20230728043352_initial.up.sql:/docker-entrypoint-initdb.d/init.sql
   pgadmin:
     container_name: jen-pgadmin
     image: dpage/pgadmin4
