Add directory separators to alias directives and location blocks

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -20,11 +20,10 @@ http {
         proxy_send_timeout 300;
         fastcgi_read_timeout 300;
 
-        root /app/static;
         gzip_static on;
 
-        location ^~ /static {
-          alias /var/www;
+        location ^~ /assets/ {
+          alias /var/www/static/;
         }
 
         location /api {
