--- a/almond-milk/package.json
+++ b/almond-milk/package.json
@@ -32,5 +32,10 @@
     "vite": "^4.4.9",
     "vite-plugin-ssr": "^0.4.136"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.28",
+    "tailwindcss": "^3.3.3"
+  }
 }
